@@ -1,7 +1,7 @@
 ﻿////////////////////////////////////////////////////////////////////////////////
 // The MIT License (MIT)
 //
-// Copyright (c) 2015 Tim Stair
+// Copyright (c) 2017 Tim Stair
 //
 // Permission is hereby granted, free of charge, to any person obtaining a copy
 // of this software and associated documentation files (the "Software"), to deal
@@ -23,16 +23,11 @@
 ////////////////////////////////////////////////////////////////////////////////
 
 using System.Drawing;
-using CardMaker.XML;
 
 namespace CardMaker.Card.FormattedText.Markup
 {
-    public class AlignCenterMarkup : MarkupBase
+    public class AlignCenterMarkup : BaseAlignMarkup
     {
-        public override bool ProcessMarkup(ProjectLayoutElement zElement, FormattedTextData zData, FormattedTextProcessData zProcessData, Graphics zGraphics)
-        {
-            zProcessData.CurrentStringAlignment = StringAlignment.Center;
-            return false;
-        }
+        protected override StringAlignment MarkupAlignment => StringAlignment.Center;
     }
 }
